@@ -4119,6 +4119,17 @@ z80_byte zxvision_read_keyboard(void)
 	return tecla;
 }
 
+void zxvision_wait_until_esc(zxvision_window *w)
+{
+	z80_byte tecla;
+
+	do {
+		tecla=zxvision_common_getkey_refresh();
+		zxvision_handle_cursors_pgupdn(w,tecla);
+	} while (tecla!=2);
+
+}
+
 
 //escribe la cadena de texto
 void zxvision_scanf_print_string(zxvision_window *ventana,char *string,int offset_string,int max_length_shown,int x,int y)
