@@ -1,12 +1,12 @@
 Version 7.2. 15 January 2019 - Neula edition
 
-Added setting to specify configuration file
 
 Improved menu environment:
 * Added new menu window type: ZX Vision. GUI Windows can be moved, resized, scrolled, minimized, closed, and change the focus to the background
 * Windows can be scrolled using mouse wheel
 * Warning and Error window messages now show an animation
 
+Added setting to specify configuration file
 Added key to save text windows contents to a file
 Added setting to send a final space after every word in the osd adventure keyboard
 Added Dandanator CPC emulation
@@ -31,11 +31,15 @@ Improved disassemble window:
 *you can now see the full opcode when debugging Sinclair QL
 *you can now show/hide hexadecimal dump of every opcode
 
+Improved hexadecimal editor:
+*now showing subzones information
+
 Fixed visual glitches in some menus when Pentagon machine and real video: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed visual glitches in some menus when interlaced enabled: audio wave, visualmem, ay piano, wave piano, view sprites
 Fixed audio bug: sending a sample to the DAC by using Next registers, it wasn't reseting the silence detection counter, so sound would probably be frozen (and repeated again, and again...)
 Fixed autoload on tbblue (on normal and also fast boot mode)
 Fixed error managing TBBlue Layer 2 vertical scroll
+Fixed triggering "opcode" condition breakpoint
 
 
 Version 7.1. 24 September 2018 - 5th Anniversary edition
